# cookiecutter-fastui-starter

./: Dockerfile  Makefile  README.md  cookiecutter.json  pyproject.toml
tests/: test_template.py
{{cookiecutter.project_slug}}/: pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.frontend_folder_name}}/: index.html  package.json  tsconfig.json  vite.config.ts
{{cookiecutter.project_slug}}/{{cookiecutter.frontend_folder_name}}/src/: App.tsx  main.scss
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: main.py
